# concept-graphs

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-bak  Dockerfile-no-cache  Dockerfile-runtime-download  README.bak.md  README.md  STATUS.md  abstract_util.py  clustering_util.py  docker-compose-local.yml  docker-compose-network-github-image.yml  docker-compose-network.yml  docker-compose.yml  docker-entrypoint-runtime-download.sh  document_dump.json  download_models.py  elasticsearch.ipynb  embedding_util.py  graph_creation_util.py  integration_util.py  load_utils.py  main.py  main_methods.py  main_utils.py  marqo_test.ipynb  meilisearch.ipynb  preprocessing_util.py  pyproject.toml  requirements  requirements.txt  requirements.txt.bak  requirements_win.txt  requirements_wo_dep.txt  status-app-factory.md  status-blueprints.md  status-main-context.md  status-main-methods-split.md  test_document_clustering_on_corpus.py  (+3 more)
.github/workflows/: build-docker-image.yml
api/: concept-graphs-api.yml  index.html
conf/: clustering_config.yaml  document_server_config.yaml  embedding_config.yaml  graph_config.yaml  pipeline-config.json  pipeline-config_de.json  pipeline-config_en.json  preprocessing_config.yaml
conf/negex_files/: negex_trigger_german_biotxtm_2016_extended.txt
conf/query-expansion/: de.yml  en.yml
conf/query-expansion/grounding/: medical_terms.example.yml
conf/query-expansion/localization/: de.yml  en.yml
conf/rag/localization/: de.yml  en.yml
experiments/: cross.py  run.py
jupyter-notebooks/: elasticsearch.ipynb  marqo_test.ipynb  top-fw-snomed.ipynb  top-prod-testing.ipynb
src/: MarqoEmbedding.py  MarqoExternalUtils.py  __init__.py  cluster_functions.py  data_functions.py  embedding_functions.py  graph_functions.py  integration_functions.py  marqo_external_utils.py  test_marqo_functions.py  util_functions.py
src/api/: context.py  pipeline.py  request_parsing.py  responses.py
src/api/pipeline_support/: __init__.py  document_server.py  execution.py  models.py  request_data.py  steps.py  vectorstore.py
src/api/routes/: __init__.py  artifacts.py  common.py  graph_documents.py  pipeline.py  processes.py  query_expansion.py  rag.py  static.py  status.py
src/api/services/: __init__.py  artifact_responses.py  configuration.py  document_server.py  pipeline_params.py  process_management.py  rag_vectorstore.py
src/common/: colors.py  config_loading.py  io.py  iterables.py  meta.py  parsing.py  spacy_extensions.py  spacy_utils.py  threads.py
src/core/: cluster_functions.py  clustering_config.py  data_functions.py  documents.py  embedding_functions.py  graph_functions.py  integration_functions.py  metrics.py  reduction.py
src/core/clustering/: __init__.py  phrase.py  word_embedding.py
src/core/data/: __init__.py  factory.py  text.py
src/core/graph/: __init__.py  algorithms.py  creation.py  incorporation.py
src/negex/: __init__.py  fixes  negex.py
src/negspacy/: context.py  negation.py  utils.py
src/nlp/negation/: README.md  __init__.py  negation.py  utils.py
src/pipeline/: base.py  document_addition.py  document_results.py  load_utils.py  processes.py  status.py
src/pipeline/steps/: clustering_util.py  embedding_util.py  graph_creation_util.py  integration_util.py  preprocessing_util.py
src/pruning/: README.md  test_unimodal.py  unimodal.py  utils.py
src/query_expansion/: __init__.py  categories.py  generator.py  grounding.py  models.py  prompts.py  service.py
src/query_expansion/sources/: __init__.py  base.py  http.py  local.py
src/rag/: TextSplitters.py  marqo_rag_utils.py  prompts.py  rag.py  text_splitters.py
src/rag/chatters/: AbstractChatter.py  BlabladorChatter.py  OllamaChatter.py  blablador.py  ollama.py
src/rag/embedding_stores/: AbstractEmbeddingStore.py  MarqoChunkEmbeddingStore.py  base.py  marqo.py
src/run/: cross.py  run.py  test.py
src/scripts/: download_models.py
src/storage/: interfaces.py  marqo_external_utils.py
src/storage/marqo/: __init__.py  document_store.py  documents.py  embedding_store.py
src/tests/: test_data_functions.py  test_graph_functions.py
templates/: graph.html
test/: test_data_functions.py  test_document_clustering_on_corpus.py  test_document_deletion.py  test_graph_functions.py  test_main_utils.py  test_marqo_provenance.py  test_pruning_unimodal.py
test/api/: test_app_factory.py  test_configuration_parsing.py  test_openapi_routes.py
test/api/pipeline_support/: test_steps.py
test/api/routes/: test_graph_document_routes.py  test_query_expansion_routes.py  test_rag_routes.py
test/core/: test_data_functions.py  test_document_clustering_on_corpus.py  test_graph_functions.py
test/data/configs/: pipeline-config_de_test.json  pipeline-config_en_test.json
test/data/scripts/: run_pipeline_on_folder.py
test/pipeline/: test_document_deletion.py
test/pruning/: test_unimodal.py
test/query_expansion/: test_generator_prompts.py  test_service.py
test/rag/: test_chatters.py  test_context.py  test_marqo_rag_utils.py  test_prompts.py  test_text_splitters.py
test/storage/marqo/: test_provenance.py
tmp/: test_labels.yaml
