[project]
name = "concept-graphs"
version = "0.9.0"
description = ""
authors = [
    {name = "Franz Matthies", email = "franz.matthies@imise.uni-leipzig.de"},
    {email = "franz.matthies@gmail.com"},
]
maintainers = [
    {name = "Franz Matthies", email = "franz.matthies@imise.uni-leipzig.de"},
]
readme = "README.md"
license = "MIT"
license-files = []
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
requires-python = "^3.11, <3.12"
dependencies = [
    "altair==5.2.0",
    "bratiaa==0.1.4",
    "curated-tokenizers==0.0.9",
    "curated-transformers==0.1.1",
    "dataclass-wizard==0.22.3",
    "datasets==2.17.0",
    "Flask==3.0.2",
    "fuzzywuzzy==0.18.0",
    "llvmlite==0.42.0",
    "munch==4.0.0",
    "networkx==3.2.1",
    "numba==0.59.0",
    "pyvis==0.3.2",
    "python-Levenshtein==0.25.0",
    "PyYAML==6.0.1",
    "scikit-network==0.31.0",
    "scipy==1.11.4",
    "sentence-transformers==2.3.1",
    "spacy==3.7.4",
    "spacy-curated-transformers==0.2.2",
    "spacy-lookups-data==1.0.5",
    "spacy-transformers==1.3.9",
    "torch==2.8.0",
    "umap-learn==0.5.2",
    "urllib3",
    "waiting==1.5.0",
    "waitress==3.0.1",
    "yellowbrick==1.5"
]

[build-system]
requires = ["poetry-core"]

[tool.poetry]
package-mode = false
packages = [
    { include = "negspacy" },
    { include = "pruning" },
    { include = "rag" },
    { include = "./*.py" },
    { include = "./src/*.py" },
]

[tool.poetry.group.vectorstore.dependencies]
marqo = "3.13.0"

[tool.poetry.group.rag]
optional = true

[tool.poetry.group.rag.dependencies]
langchain = "*"
langchain-core = "*"
langchain-community = "*"
langchain-text-splitters = "*"
langchain-openai = "*"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
black = "*"

[project.urls]
#Homepage = ""
#Documentation = ""
Repository = "https://github.com/Onto-Med/concept-graphs"
"Bug Tracker" = "https://github.com/Onto-Med/concept-graphs/issues"
#Changelog = ""
